Cambio de imagenes en el contenido

--- a/about.html
+++ b/about.html
@@ -177,7 +177,7 @@
                     </div>
                     <div class="col-lg-5 wow fadeInRight" data-wow-delay="0.2s">
                         <div class="position-relative h-100">
-                            <img src="img/about-1.jpg" class="img-fluid w-100 h-100" style="object-fit: cover;" alt="">
+                            <img src="https://formavenaconsergen.com/static/media/inicio.66eba3770a3840631baf.webp" class="img-fluid w-100 h-100" style="object-fit: cover;" alt="Construcción civil GESCOM">
                             <div class="bg-white">
                                 <div class="position-absolute pt-3 bg-white" style="width: 50%; left: 0; bottom: 0;">
                                     <div class="bg-primary p-4">
@@ -186,7 +186,7 @@
                                     </div>
                                 </div>
                                 <div class="position-absolute p-3 bg-white pb-0 pe-0" style="width: 50%; bottom: 0; right: 0;">
-                                    <img src="img/about-2.jpg" class="img-fluid" alt="">
+                                    <img src="https://images.unsplash.com/photo-1513467535987-fd81bc7d62f8?w=400&h=300&fit=crop&q=80" class="img-fluid" alt="Obra de construcción GESCOM">
                                 </div>
                             </div>
                         </div>
@@ -233,7 +233,7 @@
                     <div class="col-md-6 col-lg-3 wow fadeInUp" data-wow-delay="0.2s">
                         <div class="team-item">
                             <div class="team-img">
-                                <img src="img/team-1.jpg" class="img-fluid w-100" alt="">
+                                <img src="img/team-1.jpg" class="img-fluid w-100" alt="Gerardo - Obrero GESCOM">
                                 <div class="team-icon">
                                     <a class="btn btn-square btn-primary mb-2" href=""><i class="fab fa-facebook-f"></i></a>
                                     <a class="btn btn-square btn-primary mb-2" href=""><i class="fab fa-twitter"></i></a>
@@ -250,7 +250,7 @@
                     <div class="col-md-6 col-lg-3 wow fadeInUp" data-wow-delay="0.4s">
                         <div class="team-item">
                             <div class="team-img">
-                                <img src="img/team-2.jpg" class="img-fluid w-100" alt="">
+                                <img src="img/team-2.jpg" class="img-fluid w-100" alt="Roberto - Obrero GESCOM">
                                 <div class="team-icon">
                                     <a class="btn btn-square btn-primary mb-2" href=""><i class="fab fa-facebook-f"></i></a>
                                     <a class="btn btn-square btn-primary mb-2" href=""><i class="fab fa-twitter"></i></a>
@@ -267,7 +267,7 @@
                     <div class="col-md-6 col-lg-3 wow fadeInUp" data-wow-delay="0.6s">
                         <div class="team-item">
                             <div class="team-img">
-                                <img src="img/team-3.jpg" class="img-fluid w-100" alt="">
+                                <img src="img/team-3.jpg" class="img-fluid w-100" alt="Felipe - Obrero GESCOM">
                                 <div class="team-icon">
                                     <a class="btn btn-square btn-primary mb-2" href=""><i class="fab fa-facebook-f"></i></a>
                                     <a class="btn btn-square btn-primary mb-2" href=""><i class="fab fa-twitter"></i></a>
@@ -284,7 +284,7 @@
                     <div class="col-md-6 col-lg-3 wow fadeInUp" data-wow-delay="0.8s">
                         <div class="team-item">
                             <div class="team-img">
-                                <img src="img/team-4.jpg" class="img-fluid w-100" alt="">
+                                <img src="img/team-4.jpg" class="img-fluid w-100" alt="Jose Enrrique - Obrero GESCOM">
                                 <div class="team-icon">
                                     <a class="btn btn-square btn-primary mb-2" href=""><i class="fab fa-facebook-f"></i></a>
                                     <a class="btn btn-square btn-primary mb-2" href=""><i class="fab fa-twitter"></i></a>
