--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
                             <div id="ServiceTab-1" class="tab-pane fade show p-0 active">
                                 <div class="service-carousel owl-carousel">
                                     <div class="service-item">
-                                        <img src="img/commercial-1.jpg" class="img-fluid w-100" alt="">
+                                        <img src="https://images.unsplash.com/photo-1541888946425-d81bb19240f5?w=600&h=400&fit=crop&q=80" class="img-fluid w-100" alt="Construcción Civil">
                                         <div class="border border-top-0 p-4">
                                             <h4 class="mb-3"><span class="lang-es">Construcción Civil</span><span class="lang-en">Civil construction</span></h4>
                                             <p class="mb-4"><span class="lang-es">Edificaciones completas, ampliaciones y obras de infraestructura.</span><span class="lang-en">Complete buildings, expansions and infrastructure works.</span>
@@ -276,7 +276,7 @@
                                         </div>
                                     </div>
                                     <div class="service-item">
-                                        <img src="img/commercial-2.jpg" class="img-fluid w-100" alt="">
+                                        <img src="https://images.unsplash.com/photo-1587582423116-ec07293f0395?w=600&h=400&fit=crop&q=80" class="img-fluid w-100" alt="Estructuras Metálicas">
                                         <div class="border border-top-0 p-4">
                                             <h4 class="mb-3"><span class="lang-es">Estructuras Metálicas</span><span class="lang-en">Metal structures</span></h4>
                                             <p class="mb-4"><span class="lang-es">Fabricación y montaje de techos, naves industriales y estructuras especiales.</span><span class="lang-en">Manufacture and assembly of roofs, industrial warehouses and special structures.</span>
@@ -285,7 +285,7 @@
                                         </div>
                                     </div>
                                     <div class="service-item">
-                                        <img src="img/commercial-3.jpg" class="img-fluid w-100" alt="">
+                                        <img src="https://images.unsplash.com/photo-1581092160562-40aa08e78837?w=600&h=400&fit=crop&q=80" class="img-fluid w-100" alt="Mantenimiento General">
                                         <div class="border border-top-0 p-4">
                                             <h4 class="mb-3"><span class="lang-es">Mantenimiento General</span><span class="lang-en">General maintenance</span></h4>
                                             <p class="mb-4"><span class="lang-es">Servicio preventivo y correctivo para instalaciones, equipos y edificaciones.</span><span class="lang-en">Preventive and corrective service for facilities, equipment and buildings.</span>
@@ -298,10 +298,28 @@
                             <div id="ServiceTab-2" class="tab-pane fade show p-0">
                                 <div class="service-carousel owl-carousel">
                                     <div class="service-item">
-                                        <img src="img/residential-1.jpg" class="img-fluid w-100" alt="">
+                                        <img src="https://images.unsplash.com/photo-1565008447742-97f6f38c985c?w=600&h=400&fit=crop&q=80" class="img-fluid w-100" alt="Obras Industriales">
                                         <div class="border border-top-0 p-4">
                                             <h4 class="mb-3"><span class="lang-es">Obras Industriales</span><span class="lang-en">Industrial works</span></h4>
                                             <p class="mb-4"><span class="lang-es">Infraestructura especializada para empresas y plantas operativas.</span><span class="lang-en">Specialized infrastructure for companies and operational plants.</span>
+                                            </p>
+                                            <a class="btn btn-primary py-2 px-4" href="service.html"><span class="lang-es">Leer más</span><span class="lang-en">Read more</span></a>
+                                        </div>
+                                    </div>
+                                    <div class="service-item">
+                                        <img src="https://images.unsplash.com/photo-1589939705384-5185137a7f0f?w=600&h=400&fit=crop&q=80" class="img-fluid w-100" alt="Pintura y Acabados">
+                                        <div class="border border-top-0 p-4">
+                                            <h4 class="mb-3"><span class="lang-es">Pintura y Acabados</span><span class="lang-en">Painting and Finishes</span></h4>
+                                            <p class="mb-4"><span class="lang-es">Pintura interior y exterior, resanes y revestimientos de alta calidad.</span><span class="lang-en">Interior and exterior painting, patching and high quality coatings.</span>
+                                            </p>
+                                            <a class="btn btn-primary py-2 px-4" href="service.html"><span class="lang-es">Leer más</span><span class="lang-en">Read more</span></a>
+                                        </div>
+                                    </div>
+                                    <div class="service-item">
+                                        <img src="https://images.unsplash.com/photo-1621905251189-08b45d6a269e?w=600&h=400&fit=crop&q=80" class="img-fluid w-100" alt="Instalaciones Eléctricas">
+                                        <div class="border border-top-0 p-4">
+                                            <h4 class="mb-3"><span class="lang-es">Instalaciones Eléctricas</span><span class="lang-en">Electrical Installations</span></h4>
+                                            <p class="mb-4"><span class="lang-es">Cableado, tableros, luminarias y redes eléctricas para hogares y oficinas.</span><span class="lang-en">Wiring, panels, lighting and electrical networks for homes and offices.</span>
                                             </p>
                                             <a class="btn btn-primary py-2 px-4" href="service.html"><span class="lang-es">Leer más</span><span class="lang-en">Read more</span></a>
                                         </div>
@@ -312,7 +330,7 @@
                             <div id="ServiceTab-3" class="tab-pane fade show p-0">
                                 <div class="service-carousel owl-carousel">
                                     <div class="service-item">
-                                        <img src="img/industrial-1.jpg" class="img-fluid w-100" alt="">
+                                        <img src="https://images.unsplash.com/photo-1587582423116-ec07293f0395?w=600&h=400&fit=crop&q=80" class="img-fluid w-100" alt="Fabricación Estructura Metálicas">
                                         <div class="border border-top-0 p-4">
                                             <h4 class="mb-3"><span class="lang-es">Fabricación Estructura Metalicas</span><span class="lang-en">Metal structure fabrication</span></h4>
                                             <p class="mb-4"><span class="lang-es">diseño, fabricación e instalación de estructuras metálicas para naves industriales, cubiertas, mezzanines, portones, cerchas y más.</span><span class="lang-en">Design, fabrication and installation of metal structures for industrial warehouses, roofs, mezzanines, gates, trusses and more.</span>
@@ -321,7 +339,7 @@
                                         </div>
                                     </div>
                                     <div class="service-item">
-                                        <img src="img/industrial-2.jpg" class="img-fluid w-100" alt="">
+                                        <img src="https://images.unsplash.com/photo-1581092160562-40aa08e78837?w=600&h=400&fit=crop&q=80" class="img-fluid w-100" alt="Servicios Generales">
                                         <div class="border border-top-0 p-4">
                                             <h4 class="mb-3"><span class="lang-es">Servicios Generales</span><span class="lang-en">General services</span></h4>
                                             <p class="mb-4"><span class="lang-es">mantenimiento preventivo y correctivo, reparaciones estructurales, trabajos de soldadura, pintura, herrería y servicios de mejora continua para prolongar la vida útil de sus instalaciones.</span><span class="lang-en">Preventive and corrective maintenance, structural repairs, welding, painting, metalwork and continuous improvement services to extend the useful life of your facilities.</span>
@@ -330,10 +348,10 @@
                                         </div>
                                     </div>
                                     <div class="service-item">
-                                        <img src="img/industrial-3.jpg" class="img-fluid w-100" alt="">
+                                        <img src="https://images.unsplash.com/photo-1504328345606-18bbc8c9d7d1?w=600&h=400&fit=crop&q=80" class="img-fluid w-100" alt="Soldadura y Montaje">
                                         <div class="border border-top-0 p-4">
-                                            <h4 class="mb-3"><span class="lang-es">Estructuras Metalicas</span><span class="lang-en">Metal structures</span></h4>
-                                            <p class="mb-4"><span class="lang-es">diseño, fabricación e instalación de estructuras metálicas para naves industriales, cubiertas, mezzanines, portones, cerchas y más.</span><span class="lang-en">Design, fabrication and installation of metal structures for industrial warehouses, roofs, mezzanines, gates, trusses and more.</span>
+                                            <h4 class="mb-3"><span class="lang-es">Soldadura y Montaje</span><span class="lang-en">Welding and Assembly</span></h4>
+                                            <p class="mb-4"><span class="lang-es">Soldadura estructural, fabricación de componentes metálicos y montaje en altura con equipos especializados.</span><span class="lang-en">Structural welding, metal component fabrication and high-altitude assembly with specialized equipment.</span>
                                             </p>
                                             <a class="btn btn-primary py-2 px-4" href="service.html"><span class="lang-es">Leer más</span><span class="lang-en">Read more</span></a>
                                         </div>
