--- a/testimonial.html
+++ b/testimonial.html
@@ -161,10 +161,10 @@
                                 <div class="testimonial-quote"><i class="fa fa-quote-right fa-2x text-dark"></i>
                                 </div>
                                 <div class="testimonial-inner p-4">
-                                    <img src="img/testimonial-1.jpg" class="img-fluid" alt="">
+                                    <img src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?w=150&h=150&fit=crop&q=80" class="img-fluid" alt="Ricardo Mendoza">
                                     <div class="ms-4">
-                                        <h4>Nombre</h4>
-                                        <p><span class="lang-es">Profesión</span><span class="lang-en">Profession</span></p>
+                                        <h4>Ricardo Mendoza</h4>
+                                        <p><span class="lang-es">Ingeniero Industrial</span><span class="lang-en">Industrial Engineer</span></p>
                                         <div class="d-flex text-primary">
                                             <i class="fas fa-star"></i>
                                             <i class="fas fa-star"></i>
@@ -184,7 +184,7 @@
                                 <div class="testimonial-quote"><i class="fa fa-quote-right fa-2x text-dark"></i>
                                 </div>
                                 <div class="testimonial-inner p-4">
-                                    <img src="img/testimonial-2.jpg" class="img-fluid" alt="">
+                                    <img src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?w=150&h=150&fit=crop&q=80" class="img-fluid" alt="María López">
                                     <div class="ms-4">
                                         <h4>María López</h4>
                                         <p><span class="lang-es">Gerente de Operaciones</span><span class="lang-en">Operations Manager</span></p>
@@ -207,7 +207,7 @@
                                 <div class="testimonial-quote"><i class="fa fa-quote-right fa-2x text-dark"></i>
                                 </div>
                                 <div class="testimonial-inner p-4">
-                                    <img src="img/testimonial-3.jpg" class="img-fluid" alt="">
+                                    <img src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?w=150&h=150&fit=crop&q=80" class="img-fluid" alt="Carlos Huamán">
                                     <div class="ms-4">
                                         <h4>Carlos Huamán</h4>
                                         <p><span class="lang-es">Jefe de Mantenimiento</span><span class="lang-en">Maintenance Manager</span></p>
@@ -230,7 +230,7 @@
                                 <div class="testimonial-quote"><i class="fa fa-quote-right fa-2x text-dark"></i>
                                 </div>
                                 <div class="testimonial-inner p-4">
-                                    <img src="img/testimonial-1.jpg" class="img-fluid" alt="">
+                                    <img src="https://images.unsplash.com/photo-1580489944761-15a19d654956?w=150&h=150&fit=crop&q=80" class="img-fluid" alt="Lucía Pérez">
                                     <div class="ms-4">
                                         <h4>Lucía Pérez</h4>
                                         <p><span class="lang-es">Administradora</span><span class="lang-en">Administrator</span></p>
@@ -253,7 +253,7 @@
                                 <div class="testimonial-quote"><i class="fa fa-quote-right fa-2x text-dark"></i>
                                 </div>
                                 <div class="testimonial-inner p-4">
-                                    <img src="img/testimonial-2.jpg" class="img-fluid" alt="">
+                                    <img src="https://images.unsplash.com/photo-1560250097-0b93528c311a?w=150&h=150&fit=crop&q=80" class="img-fluid" alt="Juan Castillo">
                                     <div class="ms-4">
                                         <h4>Juan Castillo</h4>
                                         <p><span class="lang-es">Arquitecto</span><span class="lang-en">Architect</span></p>
@@ -276,7 +276,7 @@
                                 <div class="testimonial-quote"><i class="fa fa-quote-right fa-2x text-dark"></i>
                                 </div>
                                 <div class="testimonial-inner p-4">
-                                    <img src="img/testimonial-3.jpg" class="img-fluid" alt="">
+                                    <img src="https://images.unsplash.com/photo-1573496359142-b8d87734a5a2?w=150&h=150&fit=crop&q=80" class="img-fluid" alt="Rosa Vargas">
                                     <div class="ms-4">
                                         <h4>Rosa Vargas</h4>
                                         <p><span class="lang-es">Gerente de Planta</span><span class="lang-en">Plant Manager</span></p>
