--- a/proyectos.html
+++ b/proyectos.html
@@ -31,7 +31,7 @@
             <div class="container d-flex align-items-center">
                 <div class="d-flex align-items-center h-100">
                     <a href="index.html" class="navbar-brand" style="height: 125px;">
-                        <h1 class="text-primary mb-0"><i class="fas fa-cog"></i> GESCOM</h1>
+                                                <img src="img/logo.png" alt="Logo GESCOM" style="height: 80px; width: auto;">
                     </a>
                 </div>
                 <div class="w-100 h-100">
@@ -69,7 +69,7 @@
                     <div class="nav-bar px-0 py-lg-0" style="height: 80px;">
                         <nav class="navbar navbar-expand-lg navbar-light d-flex justify-content-lg-end">
                             <a href="index.html" class="navbar-brand-2">
-                                <h1 class="text-primary mb-0"><i class="fas fa-cog"></i> GESCOM</h1>
+                                                                <img src="img/logo.png" alt="Logo GESCOM" style="height: 50px; width: auto;">
                             </a>  
                             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                                 <span class="fa fa-bars"></span>
@@ -298,7 +298,7 @@
                     <div class="col-md-6 col-lg-6 col-xl-3">
                         <div class="footer-item d-flex flex-column">
                             <div class="footer-item">
-                                <h3 class="text-white mb-4"><i class="fas fa-cog text-primary me-3"></i>Gescom</h3>
+                                <img src="img/logo.png" alt="Logo GESCOM" style="height: 60px; width: auto; filter: brightness(0) invert(1);" class="mb-4">
                                 <p class="mb-3"><span class="lang-es">Atendemos todo tipo de trabajos de reparación, mantenimiento y mejora en instalaciones residenciales, comerciales e industriales.</span><span class="lang-en">We handle all types of repair, maintenance and improvement work in residential, commercial and industrial facilities.</span></p>
                             </div>
                         </div>
