implementar rutas bilingües español/inglés con redirección automática

--- a/servicios.html
+++ b/servicios.html
@@ -94,18 +94,18 @@
                             <div class="collapse navbar-collapse" id="navbarCollapse">
                                 <div class="navbar-nav mx-0 mx-lg-auto bg-white">
                                     <a href="index.html" class="nav-item nav-link"><span class="lang-es">Inicio</span><span class="lang-en">Home</span></a>
-                                    <a href="about.html" class="nav-item nav-link"><span class="lang-es">Nosotros</span><span class="lang-en">About</span></a>
-                                    <a href="service.html" class="nav-item nav-link active"><span class="lang-es">Servicios</span><span class="lang-en">Services</span></a>
+                                    <a href="nosotros.html" class="nav-item nav-link"><span class="lang-es">Nosotros</span><span class="lang-en">About</span></a>
+                                    <a href="servicios.html" class="nav-item nav-link active"><span class="lang-es">Servicios</span><span class="lang-en">Services</span></a>
                                     <div class="nav-item dropdown">
                                         <a href="#" class="nav-link" data-bs-toggle="dropdown">
                                             <span class="dropdown-toggle"><span class="lang-es">Proyectos</span><span class="lang-en">Projects</span></span>
                                         </a>
                                         <div class="dropdown-menu">
-                                            <a href="projects.html" class="dropdown-item"><span class="lang-es">Proyectos ejecutados</span><span class="lang-en">Executed Projects</span></a>
-                                            <a href="testimonial.html" class="dropdown-item"><span class="lang-es">Testimonios</span><span class="lang-en">Testimonials</span></a>
+                                            <a href="proyectos.html" class="dropdown-item"><span class="lang-es">Proyectos ejecutados</span><span class="lang-en">Executed Projects</span></a>
+                                            <a href="testimonios.html" class="dropdown-item"><span class="lang-es">Testimonios</span><span class="lang-en">Testimonials</span></a>
                                         </div>
                                     </div>
-                                    <a href="contact.html" class="nav-item nav-link"><span class="lang-es">Contacto</span><span class="lang-en">Contact</span></a>
+                                    <a href="contacto.html" class="nav-item nav-link"><span class="lang-es">Contacto</span><span class="lang-en">Contact</span></a>
                                     <div class="nav-item dropdown d-lg-none">
                                         <a href="#" class="nav-link" data-bs-toggle="dropdown">
                                             <span class="dropdown-toggle"><small class="text-body"><i class="fas fa-globe-europe text-primary me-2"></i> <span class="lang-es">Español</span><span class="lang-en">English</span></small></span>
@@ -116,7 +116,7 @@
                                         </div>
                                     </div>
                                     <div class="nav-btn ps-3">
-                                        <a href="contact.html#contact-form" class="btn btn-primary py-2 px-4 ms-0 ms-lg-3"><span class="lang-es"> Cotización</span><span class="lang-en"> Quote</span></a>
+                                        <a href="contacto.html#contact-form" class="btn btn-primary py-2 px-4 ms-0 ms-lg-3"><span class="lang-es"> Cotización</span><span class="lang-en"> Quote</span></a>
                                     </div>
                                 </div>
                             </div>
@@ -181,7 +181,7 @@
                                             <h4 class="mb-3"><span class="lang-es">Mantenimiento integral de instalaciones</span><span class="lang-en">Comprehensive facility maintenance</span></h4>
                                             <p class="mb-4"><span class="lang-es">Planes preventivos y correctivos para oficinas, locales y plantas: electricidad, plomería, pintura, soldadura y obras menores.</span><span class="lang-en">Preventive and corrective plans for offices, stores and plants: electrical, plumbing, painting, welding and minor works.</span>
                                             </p>
-                                            <a class="btn btn-primary py-2 px-4" href="contact.html"><span class="lang-es">Leer más</span><span class="lang-en">Read more</span></a>
+                                            <a class="btn btn-primary py-2 px-4" href="contacto.html"><span class="lang-es">Leer más</span><span class="lang-en">Read more</span></a>
                                         </div>
                                     </div>
                                     <div class="service-item">
@@ -190,7 +190,7 @@
                                             <h4 class="mb-3"><span class="lang-es">Obras civiles y remodelaciones</span><span class="lang-en">Civil works and remodeling</span></h4>
                                             <p class="mb-4"><span class="lang-es">Adecuaciones de ambientes, drywall, albañilería, pisos y acabados, optimizando espacios para tu operación.</span><span class="lang-en">Adaptations of environments, drywall, masonry, floors and finishes, optimizing spaces for your operation.</span>
                                             </p>
-                                            <a class="btn btn-primary py-2 px-4" href="contact.html"><span class="lang-es">Leer más</span><span class="lang-en">Read more</span></a>
+                                            <a class="btn btn-primary py-2 px-4" href="contacto.html"><span class="lang-es">Leer más</span><span class="lang-en">Read more</span></a>
                                         </div>
                                     </div>
                                     <div class="service-item">
@@ -199,7 +199,7 @@
                                             <h4 class="mb-3"><span class="lang-es">Seguridad industrial y señalización</span><span class="lang-en">Industrial safety and signage</span></h4>
                                             <p class="mb-4"><span class="lang-es">Instalación de señalética, rutas seguras, protecciones y mejoras para cumplir normativa y auditorías.</span><span class="lang-en">Installation of signage, safe routes, protections and improvements to comply with regulations and audits.</span>
                                             </p>
-                                            <a class="btn btn-primary py-2 px-4" href="contact.html"><span class="lang-es">Leer más</span><span class="lang-en">Read more</span></a>
+                                            <a class="btn btn-primary py-2 px-4" href="contacto.html"><span class="lang-es">Leer más</span><span class="lang-en">Read more</span></a>
                                         </div>
                                     </div>
                                 </div>
@@ -212,7 +212,7 @@
                                             <h4 class="mb-3"><span class="lang-es">Instalaciones eléctricas y plomería</span><span class="lang-en">Electrical installations and plumbing</span></h4>
                                             <p class="mb-4"><span class="lang-es">Diagnóstico y solución de fallas, cableado, tableros, luminarias, bombas y redes sanitarias.</span><span class="lang-en">Diagnosis and troubleshooting, wiring, panels, lighting, pumps and sanitary networks.</span>
                                             </p>
-                                            <a class="btn btn-primary py-2 px-4" href="contact.html"><span class="lang-es">Leer más</span><span class="lang-en">Read more</span></a>
+                                            <a class="btn btn-primary py-2 px-4" href="contacto.html"><span class="lang-es">Leer más</span><span class="lang-en">Read more</span></a>
                                         </div>
                                     </div>
                                     <div class="service-item">
@@ -221,7 +221,7 @@
                                             <h4 class="mb-3"><span class="lang-es">Pintura y acabados</span><span class="lang-en">Painting and finishes</span></h4>
                                             <p class="mb-4"><span class="lang-es">Pintura interior y exterior, resanes, pisos, cerámicos y mejoras estéticas con materiales de alta calidad.</span><span class="lang-en">Interior and exterior painting, repairs, floors, ceramics and aesthetic improvements with high-quality materials.</span>
                                             </p>
-                                            <a class="btn btn-primary py-2 px-4" href="contact.html"><span class="lang-es">Leer más</span><span class="lang-en">Read more</span></a>
+                                            <a class="btn btn-primary py-2 px-4" href="contacto.html"><span class="lang-es">Leer más</span><span class="lang-en">Read more</span></a>
                                         </div>
                                     </div>
                                     <div class="service-item">
@@ -230,7 +230,7 @@
                                             <h4 class="mb-3"><span class="lang-es">Remodelaciones y ampliaciones</span><span class="lang-en">Remodeling and expansions</span></h4>
                                             <p class="mb-4"><span class="lang-es">Diseño y ejecución de mejoras en cocinas, baños y áreas sociales, optimizando funcionalidad y estética.</span><span class="lang-en">Design and execution of improvements in kitchens, bathrooms and social areas, optimizing functionality and aesthetics.</span>
                                             </p>
-                                            <a class="btn btn-primary py-2 px-4" href="contact.html"><span class="lang-es">Leer más</span><span class="lang-en">Read more</span></a>
+                                            <a class="btn btn-primary py-2 px-4" href="contacto.html"><span class="lang-es">Leer más</span><span class="lang-en">Read more</span></a>
                                         </div>
                                     </div>
                                 </div>
@@ -243,7 +243,7 @@
                                             <h4 class="mb-3"><span class="lang-es">Estructuras metálicas</span><span class="lang-en">Metal structures</span></h4>
                                             <p class="mb-4"><span class="lang-es">Fabricación y montaje de coberturas, cerchas, mezzanines y estructuras especiales para plantas.</span><span class="lang-en">Manufacture and assembly of covers, trusses, mezzanines and special structures for plants.</span>
                                             </p>
-                                            <a class="btn btn-primary py-2 px-4" href="contact.html"><span class="lang-es">Leer más</span><span class="lang-en">Read more</span></a>
+                                            <a class="btn btn-primary py-2 px-4" href="contacto.html"><span class="lang-es">Leer más</span><span class="lang-en">Read more</span></a>
                                         </div>
                                     </div>
                                     <div class="service-item">
@@ -252,7 +252,7 @@
                                             <h4 class="mb-3"><span class="lang-es">Mantenimiento industrial</span><span class="lang-en">Industrial maintenance</span></h4>
                                             <p class="mb-4"><span class="lang-es">Mecánica, eléctrica y estructural: inspecciones, reparación de equipos, soldadura y mejoras operativas.</span><span class="lang-en">Mechanical, electrical and structural: inspections, equipment repair, welding and operational improvements.</span>
                                             </p>
-                                            <a class="btn btn-primary py-2 px-4" href="contact.html"><span class="lang-es">Leer más</span><span class="lang-en">Read more</span></a>
+                                            <a class="btn btn-primary py-2 px-4" href="contacto.html"><span class="lang-es">Leer más</span><span class="lang-en">Read more</span></a>
                                         </div>
                                     </div>
                                     <div class="service-item">
@@ -261,7 +261,7 @@
                                             <h4 class="mb-3"><span class="lang-es">Soldadura y fabricación</span><span class="lang-en">Welding and fabrication</span></h4>
                                             <p class="mb-4"><span class="lang-es">Soldadura estructural, fabricación de componentes, mantenimiento de líneas y soportes metálicos.</span><span class="lang-en">Structural welding, component fabrication, line maintenance and metal supports.</span>
                                             </p>
-                                            <a class="btn btn-primary py-2 px-4" href="contact.html"><span class="lang-es">Leer más</span><span class="lang-en">Read more</span></a>
+                                            <a class="btn btn-primary py-2 px-4" href="contacto.html"><span class="lang-es">Leer más</span><span class="lang-en">Read more</span></a>
                                         </div>
                                     </div>
                                 </div>
@@ -306,20 +306,20 @@
                         <div class="footer-item d-flex flex-column">
                             <h4 class="text-white mb-4"><span class="lang-es">Enlaces</span><span class="lang-en">Links</span></h4>
                             <a href="index.html"> <span class="lang-es">Inicio</span><span class="lang-en">Home</span></a>
-                            <a href="about.html"> <span class="lang-es">Nosotros</span><span class="lang-en">About</span></a>
-                            <a href="service.html"> <span class="lang-es">Servicios</span><span class="lang-en">Services</span></a>
-                            <a href="testimonial.html"> <span class="lang-es">Testimonios</span><span class="lang-en">Testimonials</span></a>
-                            <a href="contact.html"> <span class="lang-es">Contáctenos</span><span class="lang-en">Contact us</span></a>
+                            <a href="nosotros.html"> <span class="lang-es">Nosotros</span><span class="lang-en">About</span></a>
+                            <a href="servicios.html"> <span class="lang-es">Servicios</span><span class="lang-en">Services</span></a>
+                            <a href="testimonios.html"> <span class="lang-es">Testimonios</span><span class="lang-en">Testimonials</span></a>
+                            <a href="contacto.html"> <span class="lang-es">Contáctenos</span><span class="lang-en">Contact us</span></a>
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-6 col-xl-3">
                         <div class="footer-item d-flex flex-column">
                             <h4 class="text-white mb-4"><span class="lang-es">Servicios generales</span><span class="lang-en">General services</span></h4>
-                            <a href="projects.html"> <span class="lang-es">Proyectos ejecutados</span><span class="lang-en">Executed projects</span></a>
-                            <a href="service.html"> <span class="lang-es">Construcción civil</span><span class="lang-en">Civil construction</span></a>
-                            <a href="service.html"> <span class="lang-es">Estructuras metálicas</span><span class="lang-en">Metal structures</span></a>
-                            <a href="service.html"> <span class="lang-es">Mantenimiento general</span><span class="lang-en">General maintenance</span></a>
-                            <a href="service.html"> <span class="lang-es">Remodelaciones y mejoras</span><span class="lang-en">Remodeling and improvements</span></a>
+                            <a href="proyectos.html"> <span class="lang-es">Proyectos ejecutados</span><span class="lang-en">Executed projects</span></a>
+                            <a href="servicios.html"> <span class="lang-es">Construcción civil</span><span class="lang-en">Civil construction</span></a>
+                            <a href="servicios.html"> <span class="lang-es">Estructuras metálicas</span><span class="lang-en">Metal structures</span></a>
+                            <a href="servicios.html"> <span class="lang-es">Mantenimiento general</span><span class="lang-en">General maintenance</span></a>
+                            <a href="servicios.html"> <span class="lang-es">Remodelaciones y mejoras</span><span class="lang-en">Remodeling and improvements</span></a>
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-6 col-xl-3">
