--- a/testimonial.html
+++ b/testimonial.html
@@ -101,7 +101,7 @@
                                             <span class="dropdown-toggle"><span class="lang-es">Proyectos</span><span class="lang-en">Projects</span></span>
                                         </a>
                                         <div class="dropdown-menu">
-                                            <a href="proyectos.html" class="dropdown-item"><span class="lang-es">Proyectos ejecutados</span><span class="lang-en">Executed Projects</span></a>
+                                            <a href="projects.html" class="dropdown-item"><span class="lang-es">Proyectos ejecutados</span><span class="lang-en">Executed Projects</span></a>
                                             <a href="testimonial.html" class="dropdown-item"><span class="lang-es">Testimonios</span><span class="lang-en">Testimonials</span></a>
                                         </div>
                                     </div>
@@ -340,7 +340,7 @@
                     <div class="col-md-6 col-lg-6 col-xl-3">
                         <div class="footer-item d-flex flex-column">
                             <h4 class="text-white mb-4"><span class="lang-es">Servicios generales</span><span class="lang-en">General services</span></h4>
-                            <a href="proyectos.html"> <span class="lang-es">Proyectos ejecutados</span><span class="lang-en">Executed projects</span></a>
+                            <a href="projects.html"> <span class="lang-es">Proyectos ejecutados</span><span class="lang-en">Executed projects</span></a>
                             <a href="service.html"> <span class="lang-es">Construcción civil</span><span class="lang-en">Civil construction</span></a>
                             <a href="service.html"> <span class="lang-es">Estructuras metálicas</span><span class="lang-en">Metal structures</span></a>
                             <a href="service.html"> <span class="lang-es">Mantenimiento general</span><span class="lang-en">General maintenance</span></a>
