--- a/contacto.html
+++ b/contacto.html
@@ -94,18 +94,18 @@
                             <div class="collapse navbar-collapse" id="navbarCollapse">
                                 <div class="navbar-nav mx-0 mx-lg-auto bg-white">
                                     <a href="index.html" class="nav-item nav-link"><span class="lang-es">Inicio</span><span class="lang-en">Home</span></a>
-                                    <a href="about.html" class="nav-item nav-link"><span class="lang-es">Nosotros</span><span class="lang-en">About</span></a>
-                                    <a href="service.html" class="nav-item nav-link"><span class="lang-es">Servicios</span><span class="lang-en">Services</span></a>
+                                    <a href="nosotros.html" class="nav-item nav-link"><span class="lang-es">Nosotros</span><span class="lang-en">About</span></a>
+                                    <a href="servicios.html" class="nav-item nav-link"><span class="lang-es">Servicios</span><span class="lang-en">Services</span></a>
                                     <div class="nav-item dropdown">
                                         <a href="#" class="nav-link" data-bs-toggle="dropdown">
                                             <span class="dropdown-toggle"><span class="lang-es">Proyectos</span><span class="lang-en">Projects</span></span>
                                         </a>
                                         <div class="dropdown-menu">
-                                            <a href="projects.html" class="dropdown-item"><span class="lang-es">Proyectos ejecutados</span><span class="lang-en">Executed Projects</span></a>
-                                            <a href="testimonial.html" class="dropdown-item"><span class="lang-es">Testimonios</span><span class="lang-en">Testimonials</span></a>
+                                            <a href="proyectos.html" class="dropdown-item"><span class="lang-es">Proyectos ejecutados</span><span class="lang-en">Executed Projects</span></a>
+                                            <a href="testimonios.html" class="dropdown-item"><span class="lang-es">Testimonios</span><span class="lang-en">Testimonials</span></a>
                                         </div>
                                     </div>
-                                    <a href="contact.html" class="nav-item nav-link active"><span class="lang-es">Contacto</span><span class="lang-en">Contact</span></a>
+                                    <a href="contacto.html" class="nav-item nav-link active"><span class="lang-es">Contacto</span><span class="lang-en">Contact</span></a>
                                     <div class="nav-item dropdown d-lg-none">
                                         <a href="#" class="nav-link" data-bs-toggle="dropdown">
                                             <span class="dropdown-toggle"><small class="text-body"><i class="fas fa-globe-europe text-primary me-2"></i> <span class="lang-es">Español</span><span class="lang-en">English</span></small></span>
@@ -246,20 +246,20 @@
                         <div class="footer-item d-flex flex-column">
                             <h4 class="text-white mb-4"><span class="lang-es">Enlaces</span><span class="lang-en">Links</span></h4>
                             <a href="index.html"> <span class="lang-es">Inicio</span><span class="lang-en">Home</span></a>
-                            <a href="about.html"> <span class="lang-es">Nosotros</span><span class="lang-en">About</span></a>
-                            <a href="service.html"> <span class="lang-es">Servicios</span><span class="lang-en">Services</span></a>
-                            <a href="testimonial.html"> <span class="lang-es">Testimonios</span><span class="lang-en">Testimonials</span></a>
-                            <a href="contact.html"> <span class="lang-es">Contáctenos</span><span class="lang-en">Contact us</span></a>
+                            <a href="nosotros.html"> <span class="lang-es">Nosotros</span><span class="lang-en">About</span></a>
+                            <a href="servicios.html"> <span class="lang-es">Servicios</span><span class="lang-en">Services</span></a>
+                            <a href="testimonios.html"> <span class="lang-es">Testimonios</span><span class="lang-en">Testimonials</span></a>
+                            <a href="contacto.html"> <span class="lang-es">Contáctenos</span><span class="lang-en">Contact us</span></a>
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-6 col-xl-3">
                         <div class="footer-item d-flex flex-column">
                             <h4 class="text-white mb-4"><span class="lang-es">Servicios generales</span><span class="lang-en">General services</span></h4>
-                            <a href="projects.html"> <span class="lang-es">Proyectos ejecutados</span><span class="lang-en">Executed projects</span></a>
-                            <a href="service.html"> <span class="lang-es">Construcción civil</span><span class="lang-en">Civil construction</span></a>
-                            <a href="service.html"> <span class="lang-es">Estructuras metálicas</span><span class="lang-en">Metal structures</span></a>
-                            <a href="service.html"> <span class="lang-es">Mantenimiento general</span><span class="lang-en">General maintenance</span></a>
-                            <a href="service.html"> <span class="lang-es">Remodelaciones y mejoras</span><span class="lang-en">Remodeling and improvements</span></a>
+                            <a href="proyectos.html"> <span class="lang-es">Proyectos ejecutados</span><span class="lang-en">Executed projects</span></a>
+                            <a href="servicios.html"> <span class="lang-es">Construcción civil</span><span class="lang-en">Civil construction</span></a>
+                            <a href="servicios.html"> <span class="lang-es">Estructuras metálicas</span><span class="lang-en">Metal structures</span></a>
+                            <a href="servicios.html"> <span class="lang-es">Mantenimiento general</span><span class="lang-en">General maintenance</span></a>
+                            <a href="servicios.html"> <span class="lang-es">Remodelaciones y mejoras</span><span class="lang-en">Remodeling and improvements</span></a>
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-6 col-xl-3">
