--- a/contact.html
+++ b/contact.html
@@ -219,10 +219,11 @@
             <div class="container py-5">
                 <div class="row g-5 mb-5 align-items-center">
                     <div class="col-lg-7">
-                        <div class="position-relative mx-auto">
-                            <input id="subscribe-email" class="form-control w-100 py-3 ps-4 pe-5" type="text" placeholder="Correo electrónico para suscribirse">
-                            <button type="button" class="btn btn-primary position-absolute top-0 end-0 py-2 px-4 mt-2 me-2"><span class="lang-es">Suscribirse</span><span class="lang-en">Subscribe</span></button>
-                        </div>
+                        <form id="subscribe-form" class="position-relative mx-auto">
+                            <input id="subscribe-email" name="email" class="form-control w-100 py-3 ps-4 pe-5" type="email" placeholder="Correo electrónico para suscribirse" required>
+                            <button type="submit" id="subscribe-btn" class="btn btn-primary position-absolute top-0 end-0 py-2 px-4 mt-2 me-2"><span class="subscribe-text"><span class="lang-es">Suscribirse</span><span class="lang-en">Subscribe</span></span><span class="subscribe-loading d-none"><i class="fas fa-spinner fa-spin"></i></span></button>
+                            <div id="subscribe-message" class="mt-2 text-center d-none"></div>
+                        </form>
                     </div>
                     <div class="col-lg-5">
                         <div class="d-flex align-items-center justify-content-center justify-content-lg-end">
