--- a/404.html
+++ b/404.html
@@ -28,7 +28,7 @@
 
         <!-- Template Stylesheet -->
         <link href="css/style.css" rel="stylesheet">
-        <link rel="icon" type="image/svg+xml" href="img/rueda.png">
+        <link rel="icon" type="image/svg+xml" href="img/icono.png">
     </head>
 
     <body>
@@ -46,9 +46,9 @@
         <!-- Navbar & Hero Start -->
         <div class="container-fluid header-top">
             <div class="container d-flex align-items-center">
-                <div class="d-flex align-items-center h-100">
-                    <a href="index.html" class="navbar-brand" style="height: 125px;">
-                        <img src="img/logo.png" alt="Logo GESCOM" style="height: 80px; width: auto;">
+                <div class="d-none d-lg-flex align-items-center justify-content-center h-100">
+                    <a href="index.html" class="navbar-brand d-flex align-items-center" style="height: 125px;">
+                        <img src="img/logo-ligth.png" alt="Logo GESCOM" style="height: 80px; width: auto; object-fit: contain;">
                     </a>
                 </div>
                 <div class="w-100 h-100">
@@ -86,7 +86,7 @@
                     <div class="nav-bar px-0 py-lg-0" style="height: 80px;">
                         <nav class="navbar navbar-expand-lg navbar-light d-flex justify-content-lg-end">
                             <a href="index.html" class="navbar-brand-2">
-                                <img src="img/logo.png" alt="Logo GESCOM" style="height: 50px; width: auto;">
+                                <img src="img/logo-ligth.png" alt="Logo GESCOM" style="height: 50px; width: auto;">
                             </a>  
                             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                                 <span class="fa fa-bars"></span>
